--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>noticeBoard</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
+    <packaging>jar</packaging>
 
     <properties>
         <org.springframework.version>4.3.7.RELEASE</org.springframework.version>
