--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
     <artifactId>noticeBoard</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-<!--    <packaging>war</packaging>-->
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <org.springframework.version>4.3.7.RELEASE</org.springframework.version>
