--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .class
-target/**
+#target/**
 # Created by https://www.gitignore.io/api/intellij+iml
 # Edit at https://www.gitignore.io/?templates=intellij+iml
 
